<resources>
    <string name="app_name">shop</string>
    <string name="mainPage">Главная</string>
    <string name="cart">Корзина</string>
    <string name="about">бакалейная лавка годнотента</string>
    <string name="contacts">Контакты</string>
    <string name="shipping">Доставка</string>
    <string name="profile">Профиль</string>
    <string name="godno">godno</string>
    <string name="lavka">lavka</string>
    <string name="cartButton">cartButton</string>
    <string name="filterButton">filterButton</string>
    <string name="image">image</string>
    <string name="image1">imageOne</string>
    <string name="imagePreview">imgPre</string>
    <string name="goods">goodsName</string>
    <string name="goodsDesc">goodsDesc</string>
    <string name="goodsPrice">199 ₽</string>
    <string name="amountDefault">1</string>
    <string name="aboutText">
        Мы вас любим, поэтому стараемся каждый день радовать вкусным чаем, полезными грибочками и многим другим. Вы не пожалеете, когда попробуете!\n\nТы, наверное, думаешь: — «Иисус Христос, Дева Мария, Иосиф, что я тут делаю?»
        — Дружище, не переживай, ты по адресу! Дело в том, что мы продаём очумелые товары. Ну, знаешь, те самые товары,
        после которых ты уже никогда не будешь прежним. То есть, твой мир буквально переворачивается, земля уходит из под ног,
        а твои волосы становятся седыми! Подумай, что ты теряешь не покупая у нас чай, грибочки и благовония? Всё! Ты теряешь всё!
        Но у тебя есть шанс исправиться… Получи благословения от древних инков купив дерево «пало санто». Японцы перестанут делать
        харакири, если ты купишь у нас «матчу». Китайцы же отдохнут от опиума, когда ты выпьешь «лао ча тоу». А бедные буряты…
        Эх, не будем про бурят, просто забери у нас «саган дайля», который они выращивают у себя в огородах. Совсем забыли про
        «ежовик гребенчатый», ведь Пол Стемец уже окончательно сошёл с ума, потерял память и вообще обезумел, а ведь он забывает
        пропить курс «ежовика гребенчатого», который восстанавливает нейронные связи. В общем, дружок, посыл ты уяснил. Располагайся, у нас тут уютно!</string>
    <string name="shippingMethod">Отправляем "Почтой России", 1 классом (с треком отслеживания).\n
        Приблизительная стоимость отправки 198-271 рублей, зависит от веса посылки и вашего местонахождения. Отправка осуществляется из СПб!\nАнкета для заказа:\n1) Имя Фамилия\n2) Адрес (город, улица, дом, корп., кв.) , почтовый индекс\n3) Удобный способ оплаты:\n
    Прикрепляйте комментарий к оплате\n
    Способы оплаты: Сбербанк, Киви, Яндекс.Деньги\n
    Стикеры отправляем и простым и заказным письмом:\n
        Простое (30 рублей) забирается с почты по извещению (без трек-кода)\n
        Заказное (75 рублей) забирается с почты по извещению (с трек-кодом)\n
        (Доставка в другие страны +50 рублей)</string>
    <string name="contactsText">https://vk.link/godnolavka\nглавный паблик: https://vk.com/godnotent\nинстаграм: https://www.instagram.com/godnolavka\nTikTok: @godnolavka\nпочта: godnolavka@gmail.com</string>
    <string name="amountText">Введите количество</string>
    <string name="totalPrice">Total Price:</string>
</resources>